# Sportsanalytics

./: .dockerignore  .gitignore  .replit  ACTUAL_SCORE_FEATURE.md  BetCard.jsx  CHANGELOG_SINCE_BET_150.md  Dockerfile  HIGHLIGHTS_FEATURE.md  LAUNCH_PLAN.md  MIGRATION_SUMMARY.md  MONEY_FEATURES_SUMMARY.md  ODDS_API_UPGRADE.md  Procfile  RAILWAY_CHECKLIST.md  RAILWAY_DEPLOYMENT.md  RAILWAY_ENV_VARS.md  SGP_LIVE_ODDS_STATUS.md  START_HERE_RAILWAY.md  SYSTEM_STATUS_SUMMARY.md  TELEGRAM_COMMANDS.md  TONIGHT_DREAM_SCENARIO.md  YOUR_ACTION_PLAN.md  add_btts_ml_bet.py  add_sample_bet.py  add_sgp_channel.py  add_telegram_channel.py  add_telegram_subscriber.py  advanced_features.py  aggressive_esoccer_betting.py  analysis1.csv  analysis2.csv  analysis3.csv  analysis4.csv  analysis5.csv  analysis_data_loader.py  analysis_ev_thresholds.py  analysis_home_away.py  analysis_league_roi.py  analysis_tempo.py  analysis_xg_diff.py  (+307 more)
.streamlit/: config.toml
attached_assets/: Pasted--PGR-DROP-IN-Same-Game-Parlays-SGP--1762891197069_1762891197073.txt  Pasted--auth-discord-py-import-os-import-time-from-urllib-pars_1764939643380.txt  Pasted--discord-notifier-py-import-os-import-requests-Koppling_1764928592519.txt  Pasted--sgp-correlation-py-from-typing-import-List-Dict-Tuple-1-Konfiguration--1762985940654_1762985940656.txt  Pasted--value-singles-engine-py-VALUE-SIN-1763772914727_1763772914728.txt  Pasted--value-singles-engine-py-VALUE-SINGLE-1763816521584_1763816521586.txt  Pasted-Free-Predictions-Teaser-Not-Bait-Objective-Generate-a-l_1766491911015.txt  Pasted-SYSTEM-ROLE-You-are-an-analysis-only-engine-You-do-NOT-_1767644409855.txt  Pasted-TASK-Run-an-offline-analysis-on-historical-bets-to-improve-Exact-Score-ES-and-SGP-models-Use-onl-1762886806389_1762886806391.txt  Pasted-We-already-have-logic-that-removes-Exact-Score-bets-when-they-conflict-with-higher-EV-value-singles--1764269669691_1764269669691.txt  (+12 more)
(+61 files in other folders)
