[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.2",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "plotly>=6.3.0",
    "python-telegram-bot==20.7",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "selenium>=4.35.0",
    "streamlit>=1.49.1",
    "tensorflow>=2.20.0",
    "trafilatura>=2.0.0",
    "xgboost>=3.0.5",
]
